--- a/src/screen/gameHistory/GameHistory.scss
+++ b/src/screen/gameHistory/GameHistory.scss
@@ -1,3 +1,10 @@
 .game-history {
+  .history-container {
+    display: flex;
+    flex-wrap: wrap;
+    .history-card{
+      margin: 10px;
+    }
+  }
 
 }
