--- a/src/screen/recordGame/RecordGame.scss
+++ b/src/screen/recordGame/RecordGame.scss
@@ -1,4 +1,7 @@
 .recode-game {
+    .warning {
+        color: red
+    }
     .score-record-box {
         margin: 12px 0;
         .record-input {
